Enable feature on mobile: Open verse list in new tab button shown in verse list popups (fixes #1360)

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -868,10 +868,6 @@ Librem 5/Pinephone etc.
     flex-direction: column;
   }
 
-  #open-verselist-in-new-tab-button {
-    display: none !important;
-  }
-
   .fullscreen #app-container .verse-reference-content {
     text-decoration: unset !important;
     cursor: unset !important;
